--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "client-only": "^0.0.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "cross-env": "^7.0.3",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "graphql": "^16.8.1",
@@ -70,6 +71,7 @@
     "recharts": "^3.0.2",
     "server-only": "^0.0.1",
     "sonner": "^2.0.6",
+    "stripe": "^18.3.0",
     "superjson": "^2.2.2",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
