--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
     "lint": "next lint",
     "generate:types": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload generate:types",
     "db:fresh": "payload migrate:fresh",
-    "db:seed": "payload run src/seed.ts"
+    "db:seed": "payload run src/seed.ts",
+    "map": "payload generate:importmap"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
-    "@payloadcms/db-mongodb": "^3.46.0",
-    "@payloadcms/next": "^3.46.0",
-    "@payloadcms/payload-cloud": "^3.46.0",
-    "@payloadcms/plugin-multi-tenant": "3.46.0",
-    "@payloadcms/richtext-lexical": "^3.46.0",
-    "@payloadcms/storage-vercel-blob": "3.46.0",
+    "@payloadcms/db-mongodb": "3.49.0",
+    "@payloadcms/next": "3.49.0",
+    "@payloadcms/payload-cloud": "3.49.0",
+    "@payloadcms/plugin-multi-tenant": "3.49.0",
+    "@payloadcms/richtext-lexical": "3.49.0",
+    "@payloadcms/storage-vercel-blob": "3.49.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
