--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "react-resizable-panels": "^3.0.3",
     "recharts": "^3.0.2",
     "server-only": "^0.0.1",
+    "sharp": "^0.34.3",
     "sonner": "^2.0.6",
     "stripe": "^18.3.0",
     "superjson": "^2.2.2",
